Code/syntax.output
State 28 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec
   26         | error COMMA
   27         | error RB

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | /* empty */

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI

   39 DefList: Def DefList
   40        | /* empty */

   41 Def: Specifier DecList SEMI
   42    | error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 8 22 26 27 29 38 42
ASSIGNOP (258) 46 47
OR (259) 49
AND (260) 48
RELOP (261) 50
MINUS (262) 52 56
PLUS (263) 51
DIV (264) 54
STAR (265) 53
NOT (266) 57
DOT (267) 61
RB (268) 19 27 60
LB (269) 19 60
RP (270) 20 21 22 35 36 37 55 58 59
LP (271) 20 21 35 36 37 55 58 59
LOWER_THAN_ELSE (272)
ELSE (273) 36
INT (274) 19 63
FLOAT (275) 64
TYPE (276) 11
ID (277) 15 17 18 20 21 58 59 61 62
LC (278) 13 28
RC (279) 13 28 29
WHILE (280) 37
IF (281) 35 36
RETURN (282) 34
STRUCT (283) 13 14
COMMA (284) 10 23 26 44 65
SEMI (285) 4 5 7 8 32 34 38 41 42


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 25 41
StructSpecifier (37)
    on left: 13 14, on right: 12
OptTag (38)
    on left: 15 16, on right: 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 9 10 19 25 45 46
FunDec (41)
    on left: 20 21 22, on right: 6 7
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25 26 27, on right: 23 24
CompSt (44)
    on left: 28 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 28 30
Stmt (46)
    on left: 32 33 34 35 36 37 38, on right: 30 35 36 37
DefList (47)
    on left: 39 40, on right: 13 28 39
Def (48)
    on left: 41 42, on right: 39
DecList (49)
    on left: 43 44, on right: 41 44
Dec (50)
    on left: 45 46, on right: 43 44
Exp (51)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64,
    on right: 32 34 35 36 37 46 47 48 49 50 51 52 53 54 55 56 57 60
    61 65 66
Args (52)
    on left: 65 66, on right: 58 65


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


state 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


state 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

   22 FunDec: error . RP

    RP  shift, and go to state 22


state 16

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 18 (VarDec)


state 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


state 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 25
    COMMA  shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 27
    LC     shift, and go to state 28
    SEMI   shift, and go to state 29

    CompSt  go to state 30


state 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


state 22

   22 FunDec: error RP .

    $default  reduce using rule 22 (FunDec)


state 23

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    error   shift, and go to state 35
    RP      shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 38
    ParamDec         go to state 39


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 41

    ExtDecList  go to state 42
    VarDec      go to state 19


state 27

   29 CompSt: error . RC

    RC  shift, and go to state 43


state 28

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 34


state 29

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


state 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 31

   42 Def: error . SEMI

    SEMI  shift, and go to state 45


state 32

   41 Def: Specifier . DecList SEMI

    ID  shift, and go to state 41

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


state 33

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


state 34

   39 DefList: Def . DefList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 34


state 35

   26 ParamDec: error . COMMA
   27         | error . RB

    RB     shift, and go to state 51
    COMMA  shift, and go to state 52


state 36

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 37

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 41

    VarDec  go to state 53


state 38

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


state 39

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 24 (VarList)


state 40

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


state 41

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 42

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


state 43

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


state 44

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    LC      shift, and go to state 28
    WHILE   shift, and go to state 64
    IF      shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


state 45

   42 Def: error SEMI .

    $default  reduce using rule 42 (Def)


state 46

   19 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 25

    $default  reduce using rule 45 (Dec)


state 47

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


state 48

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 43 (DecList)


state 49

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


state 50

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


state 51

   27 ParamDec: error RB .

    $default  reduce using rule 27 (ParamDec)


state 52

   26 ParamDec: error COMMA .

    $default  reduce using rule 26 (ParamDec)


state 53

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 25 (ParamDec)


state 54

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 55

   23 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 37
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 39


state 56

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 57

   29 CompSt: error . RC
   38 Stmt: error . SEMI

    RC    shift, and go to state 43
    SEMI  shift, and go to state 75


state 58

   56 Exp: MINUS . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 76


state 59

   57 Exp: NOT . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 77


state 60

   55 Exp: LP . Exp RP

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 78


state 61

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


state 62

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


state 63

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 79

    $default  reduce using rule 62 (Exp)


state 64

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 80


state 65

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


state 66

   34 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 82


state 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


state 68

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


state 69

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    INT     shift, and go to state 61
    FLOAT   shift, and go to state 62
    ID      shift, and go to state 63
    LC      shift, and go to state 28
    WHILE   shift, and go to state 64
    IF      shift, and go to state 65
    RETURN  shift, and go to state 66

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 84
    Stmt      go to state 69
    Exp       go to state 70


state 70

   32 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    MINUS     shift, and go to state 89
    PLUS      shift, and go to state 90
    DIV       shift, and go to state 91
    STAR      shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    SEMI      shift, and go to state 95


state 71

   46 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 96


state 72

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


state 73

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 41

    VarDec   go to state 46
    DecList  go to state 97
    Dec      go to state 48


state 74

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 75

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


state 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DIV   shift, and go to state 91
    STAR  shift, and go to state 92
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 56 (Exp)


state 77

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 57 (Exp)


state 78

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    MINUS     shift, and go to state 89
    PLUS      shift, and go to state 90
    DIV       shift, and go to state 91
    STAR      shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    RP        shift, and go to state 98


state 79

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    RP     shift, and go to state 99
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp   go to state 100
    Args  go to state 101


state 80

   37 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 102


state 81

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 103


state 82

   34 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    OR        shift, and go to state 86
    AND       shift, and go to state 87
    RELOP     shift, and go to state 88
    MINUS     shift, and go to state 89
    PLUS      shift, and go to state 90
    DIV       shift, and go to state 91
    STAR      shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94
    SEMI      shift, and go to state 104


state 83

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


state 84

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


state 85

   47 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 105


state 86

   49 Exp: Exp OR . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 106


state 87

   48 Exp: Exp AND . Exp

    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    INT    shift, and go to state 61
    FLOAT  shift, and go to state 62
    ID     shift, and go to state 63

    Exp  go to state 107


state 88

   50 Exp: Exp RELOP . Exp
